service/auth-ory-admin-ui/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ory-admin-ui
  namespace: auth
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auth-ory-admin-ui
  template:
    metadata:
      labels:
        app: auth-ory-admin-ui
    spec:
      containers:
        - name: auth-ory-admin-ui
          image: ghcr.io/josxha/ory_admin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
