service/auth-ory-admin-ui/k8s/base/manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-ory-admin-ui
  namespace: auth
spec:
  selector:
    app: auth-ory-admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ory-admin-ui
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-ory-admin-ui
  template:
    metadata:
      labels:
        app: auth-ory-admin-ui
    spec:
      containers:
        - name: auth-ory-admin-ui
          image: ghcr.io/josxha/ory_admin:latest
          ports:
            - containerPort: 8080
