service/auth-ory-admin-ui/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-ory-admin-ui
  namespace: auth
spec:
  selector:
    app: auth-ory-admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
